# mpr-photo-editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile  pyproject.toml
.github/workflows/: ci.yml  ci_cpp.yml  ci_deb_package.yml  ci_python.yml
chocolatey/: mpr-photo-editor.nuspec
chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
cpp/: CMakeLists.txt
cpp/bindings/: python_bindings.cpp
cpp/include/: image_manager.h
cpp/include/mpr_photo_editor/: image_manager.h  image_types.h
cpp/src/: image_manager.cpp
gui/: CMakeLists.txt
gui/resources/: PhotoEditor.desktop  deb_mpr-photo-editor.desktop  deb_package_control
gui/src/: main.cpp
mpr_photo_editor/: __init__.py  backend.py  controller.py  gui.py  helper.py  model.py  node_panels.py  nodes.py
mpr_photo_editor/commands/: command_base.py  conn_commands.py  image_commands.py  node_commands.py  position_commands.py  setting_commands.py
rust/: Cargo.toml  build.rs
rust/ffi/: libraw_wrapper.cpp  libraw_wrapper.hpp
rust/src/: image_loader.rs  image_manager.rs  lib.rs
tests/: CMakeLists.txt  test_backend.py
tests/cpp/: CMakeLists.txt
tests/python/: test_bindings.py
