[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "mpr-photo-editor"
version = "0.1.0"
description = "A node-based cross-platform photo editor."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Michael Prasthofer", email = "michael.prasthofer@protonmail.com" }
]
dependencies = [
    "pyside6"
]
keywords = ["photo", "editor", "c++", "gui", "image-processing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Graphics :: Editors"
]

[project.scripts]
mpr-photo-editor = "mpr_photo_editor.gui:main"

[project.optional-dependencies]
dev = [
    "pybind11", # Required for building the C++ backend
    "pytest",
    "mypy",
    "ruff",
    # on Linux we also install auditwheel in the CI workflow file,
    # on macOS we also install delocate in the CI workflow file
]

[tool.scikit-build]
wheel.packages = ["mpr_photo_editor"]

[tool.mypy]
[[tool.mypy.overrides]]
module = "pyside6.*"
ignore_missing_imports = true
